    * remove_logo filter
    * lavcresample is now used by default (use -af-adv force=0 for old
      behaviour).

    MEncoder:
    * audio encoding modularized
    * AAC (FAAC) audio encoding
    * border processing adaptive quantization in libavcodec
    * XviD's encoding zones and luminance masking
    * raw audio muxer
    * fixed various bugs in the EDL code

    Ports:
    * improved timer function on Mac OS X
    * New Mac OS X "macosx" video output driver. Supported on OS X 10.4
      and 10.3 with QuickTime 7 (requires QuickTime 7 SDK to build on 10.3)
    * Mac OS X 10.4 (Tiger) fixes
    * macosx audio output driver fixes
    * support for playing DVDs from the hard disk on Cygwin
    * DragonFly BSD support

    Others:
    * enabled hinting for TrueType fonts
    * support for file:// syntax
    * -fb option removed, use the device suboption of -vo fbdev/fbdev2 instead
    * massive stream layer cleanup, all streams ported to the new API
    * full gcc 4 support for IA-32 and AMD-64 ports
    * TOOLS/vobshift.py: vobsub time-adjust tool
    * fixed auto-insertion of lavc encoder used with hardware MPEG1/2 decoders such as dxr2/3 and dvb


  pre7: "PatentCounter" April 16, 2005

    Security:
    * heap overflow in Real RTSP streaming code fixed
    * buffer overflow in MMST streaming code fixed


    DOCS:
    * Czech documentation translation in progress
    * German man page almost synced
    * slave mode command documentation finished
    * TOOLS documented in TOOLS/README
    * audio filter documentation moved to the man page and updated
    * all audio filters documented
    * improved encoding guide
    * preliminary documentation for Snow codec in DOCS/tech/snow.txt
    * misc updates and fixes all over the place

    Ports:
    * DirectX video output fixed on Windows95
    * DirectX video output now supports 256 color mode
    * audio device selection support for dsound audio output driver